tests/ui/mismatched_types/similar_paths.stderr
error[E0308]: mismatched types
  --> $DIR/similar_paths.rs:7:5
   |
LL | pub fn foo() -> Option<u8> {
   |                 ---------- expected `Option<u8>` because of return type
LL |     Some(42_u8)
   |     ^^^^^^^^^^^ expected `Option<u8>`, found `std::option::Option<u8>`
   |
   = note: `std::option::Option<u8>` and `Option<u8>` have similar names, but are actually distinct types
note: `std::option::Option<u8>` is defined in crate `core`
  --> $SRC_DIR/core/src/option.rs:LL:COL
note: `Option<u8>` is defined in the current crate
  --> $DIR/similar_paths.rs:1:1
   |
LL | enum Option<T> {
   | ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
